# con-game-alerter-discord.py-rewrite

./: a.txt  fake_data.py  intervals.py  keep_alive.py  main.py  make_bot.py  methods.py  pyproject.toml  readme.md
api/: con_api.py  youtube_api.py
bruh/ext/test/: backend.py  factories.py  runner.py  state.py
commands/: README.md  admin.py  alerts.py  alliance.py  basic.py  coach.py  country.py  fun.py  global_games.py  meme.py  player.py  request_game.py  units.py
commands/con/: alerts.py  buildings.py  coach.py  fun.py  request_game.py  video.py
commands/con/api/: alliance.py  global_games.py  player.py  request_game.py
commands/con/static_data/: country.py  format.py  simulator.py  units.py
commands/universal/: admin.py  basic.py
data/: alertpeople.txt  alertpeople2.txt  buildings.json  coach.txt  config.py  countriesfinal.txt  database.db  formats.json  games_cache.json  map.txt  memes.txt  rooms.txt  seengames.txt  units.json
discord_utils/: converters.py  embeds.py
events/: command.py  error.py  message.py  ready.py
scraper/: request_game.py
unit_tests/: generate_tests.py  test.py  test_methods.py
