[tool.poetry]
name = "con-game-alerter-discordpy-rewrite"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
selenium = "^3.141.0"
config = "^0.5.0"
discord = "^1.0.1"
flask = "^1.1.2"
replit = "^2.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
