[tool.poetry]
name = "3_con-game-alerter-discordpy-rewrite"
version = "0.1.0"
description = ""
authors = ["Eulerthedestroyer"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
replit = "^2.0.0"
aiohttp = "^3.6.2"
discord = "^1.0.1"
python-Levenshtein = "^0.12.0"
pytest = "^6.1.2"
termcolor = "^1.1.0"
nest-asyncio = "^1.4.2"
colored = "^1.4.2"
scraper = "^0.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
